--- a/public/slides/slide-04-corpse.html
+++ b/public/slides/slide-04-corpse.html
@@ -38,11 +38,12 @@
       height: 650px;
       background: #0a0a0a;
       border-radius: 32px;
-      display: flex;
-      align-items: center;
-      justify-content: center;
-      font-size: 24px;
-      color: #4a4a4a;
+      overflow: hidden;
+    }
+    .phone-screen img {
+      width: 100%;
+      height: 100%;
+      object-fit: cover;
     }
     .title {
       font-size: 52px;
@@ -74,7 +75,7 @@
   <div class="right">
     <div class="phone-frame">
       <div class="phone-screen">
-        [Screenshot: Corpse]
+        <img src="/screenshots/05-corpse.png" alt="Corpse Discovery">
       </div>
     </div>
   </div>
