--- a/public/slides/slide-07-build.html
+++ b/public/slides/slide-07-build.html
@@ -14,9 +14,13 @@
       font-family: 'Courier New', monospace;
       color: #f5f5f5;
     }
-    .emoji {
-      font-size: 140px;
+    .avatar {
+      width: 200px;
+      height: 200px;
+      border-radius: 50%;
       margin-bottom: 50px;
+      box-shadow: 0 0 60px rgba(168, 85, 247, 0.4);
+      object-fit: cover;
     }
     .title {
       font-size: 64px;
@@ -48,7 +52,7 @@
   </style>
 </head>
 <body>
-  <div class="emoji">🦝</div>
+  <img src="pisco-avatar.png" alt="Pisco" class="avatar">
   <div class="title">BUILT BY PISCO</div>
   <div class="stats">6 Days • Full Stack • No Human Code</div>
   <div class="details">
