Update all docs and pitch with on-chain death verification

--- a/public/slides/slide-03-game.html
+++ b/public/slides/slide-03-game.html
@@ -67,6 +67,7 @@
     <div class="line">Stake <span class="sol">SOL</span>. Descend into the crypt.</div>
     <div class="line">Fight. <span class="dim">Probably die.</span></div>
     <div class="line" style="margin-top: 40px; color: #ef4444;">Your death feeds the depths.</div>
+    <div class="line dim" style="font-size: 24px; margin-top: 20px;">Every death hashed & verified on-chain.</div>
   </div>
   <div class="right">
     <div class="phone-frame">
