--- a/public/slides/slide-07-build.html
+++ b/public/slides/slide-07-build.html
@@ -58,7 +58,7 @@
   <div class="details">
     <div class="detail">Content Bible <span>→</span> 300+ Narratives</div>
     <div class="detail">ElevenLabs <span>→</span> Custom Audio</div>
-    <div class="detail">Solana <span>→</span> Real SOL Staking</div>
+    <div class="detail">Solana <span>→</span> Real SOL Staking + On-Chain Death Proofs</div>
     <div class="detail">InstantDB <span>→</span> Live Death Feed</div>
   </div>
 </body>
