Fix slides: use absolute paths for iframe src

--- a/public/slides/index.html
+++ b/public/slides/index.html
@@ -81,7 +81,7 @@
 <body>
   <div class="slide-wrapper">
     <div class="slide-container" id="container">
-      <iframe id="slide" src="slide-01-hook.html"></iframe>
+      <iframe id="slide" src="/slides/slide-01-hook.html"></iframe>
     </div>
   </div>
   
@@ -93,14 +93,14 @@
 
   <script>
     const slides = [
-      'slide-01-hook.html',
-      'slide-02-title.html',
-      'slide-03-game.html',
-      'slide-04-corpse.html',
-      'slide-05-skill.html',
-      'slide-06-together.html',
-      'slide-07-build.html',
-      'slide-08-close.html'
+      '/slides/slide-01-hook.html',
+      '/slides/slide-02-title.html',
+      '/slides/slide-03-game.html',
+      '/slides/slide-04-corpse.html',
+      '/slides/slide-05-skill.html',
+      '/slides/slide-06-together.html',
+      '/slides/slide-07-build.html',
+      '/slides/slide-08-close.html'
     ];
     
     let current = 0;
