Add ASCII art logo to slides 2 and 8

--- a/public/slides/slide-08-close.html
+++ b/public/slides/slide-08-close.html
@@ -20,13 +20,14 @@
       letter-spacing: 3px;
       margin-bottom: 50px;
     }
-    .logo {
-      font-size: 80px;
-      font-weight: bold;
+    .ascii-logo {
+      font-size: 24px;
+      line-height: 1.1;
       color: #ef4444;
-      text-shadow: 0 0 60px rgba(239, 68, 68, 0.6);
-      letter-spacing: 10px;
-      margin-bottom: 60px;
+      text-shadow: 0 0 40px rgba(239, 68, 68, 0.5);
+      margin-bottom: 50px;
+      white-space: pre;
+      font-weight: bold;
     }
     .url {
       font-size: 36px;
@@ -45,7 +46,12 @@
 </head>
 <body>
   <div class="tagline">Your death feeds the depths.</div>
-  <div class="logo">💀 DIE FORWARD</div>
+  <pre class="ascii-logo"> ██████╗ ██╗███████╗    ███████╗ ██████╗ ██████╗ ██╗    ██╗ █████╗ ██████╗ ██████╗ 
+ ██╔══██╗██║██╔════╝    ██╔════╝██╔═══██╗██╔══██╗██║    ██║██╔══██╗██╔══██╗██╔══██╗
+ ██║  ██║██║█████╗      █████╗  ██║   ██║██████╔╝██║ █╗ ██║███████║██████╔╝██║  ██║
+ ██║  ██║██║██╔══╝      ██╔══╝  ██║   ██║██╔══██╗██║███╗██║██╔══██║██╔══██╗██║  ██║
+ ██████╔╝██║███████╗    ██║     ╚██████╔╝██║  ██║╚███╔███╔╝██║  ██║██║  ██║██████╔╝
+ ╚═════╝ ╚═╝╚══════╝    ╚═╝      ╚═════╝ ╚═╝  ╚═╝ ╚══╝╚══╝ ╚═╝  ╚═╝╚═╝  ╚═╝╚═════╝</pre>
   <div class="url">die-forward.vercel.app</div>
   <div class="hackathon">COLOSSEUM AGENT HACKATHON 2026</div>
 </body>
