--- a/public/slides/slide-02-title.html
+++ b/public/slides/slide-02-title.html
@@ -14,21 +14,17 @@
       font-family: 'Courier New', monospace;
       color: #f5f5f5;
     }
-    .skull {
-      font-size: 120px;
-      margin-bottom: 40px;
-      opacity: 0.9;
-    }
-    .logo {
-      font-size: 96px;
-      font-weight: bold;
+    .ascii-logo {
+      font-size: 28px;
+      line-height: 1.1;
       color: #f59e0b;
-      text-shadow: 0 0 60px rgba(245, 158, 11, 0.5);
-      letter-spacing: 16px;
-      margin-bottom: 40px;
+      text-shadow: 0 0 40px rgba(245, 158, 11, 0.5);
+      margin-bottom: 50px;
+      white-space: pre;
+      font-weight: bold;
     }
     .tagline {
-      font-size: 36px;
+      font-size: 42px;
       color: #a1a1aa;
       letter-spacing: 4px;
       margin-bottom: 30px;
@@ -41,8 +37,12 @@
   </style>
 </head>
 <body>
-  <div class="skull">💀</div>
-  <div class="logo">DIE FORWARD</div>
+  <pre class="ascii-logo"> ██████╗ ██╗███████╗    ███████╗ ██████╗ ██████╗ ██╗    ██╗ █████╗ ██████╗ ██████╗ 
+ ██╔══██╗██║██╔════╝    ██╔════╝██╔═══██╗██╔══██╗██║    ██║██╔══██╗██╔══██╗██╔══██╗
+ ██║  ██║██║█████╗      █████╗  ██║   ██║██████╔╝██║ █╗ ██║███████║██████╔╝██║  ██║
+ ██║  ██║██║██╔══╝      ██╔══╝  ██║   ██║██╔══██╗██║███╗██║██╔══██║██╔══██╗██║  ██║
+ ██████╔╝██║███████╗    ██║     ╚██████╔╝██║  ██║╚███╔███╔╝██║  ██║██║  ██║██████╔╝
+ ╚═════╝ ╚═╝╚══════╝    ╚═╝      ╚═════╝ ╚═╝  ╚═╝ ╚══╝╚══╝ ╚═╝  ╚═╝╚═╝  ╚═╝╚═════╝</pre>
   <div class="tagline">Your death feeds the depths</div>
   <div class="subtitle">A social roguelite for agents and humans</div>
 </body>
