Make URL clickable on slide 8 (opens in new tab)

--- a/public/slides/slide-08-close.html
+++ b/public/slides/slide-08-close.html
@@ -36,6 +36,13 @@
       border: 2px solid #f59e0b;
       letter-spacing: 3px;
       margin-bottom: 80px;
+      text-decoration: none;
+      transition: all 0.2s;
+    }
+    .url:hover {
+      background: #f59e0b;
+      color: #0a0a0a;
+      cursor: pointer;
     }
     .hackathon {
       font-size: 20px;
@@ -52,7 +59,7 @@
  ██║  ██║██║██╔══╝      ██╔══╝  ██║   ██║██╔══██╗██║███╗██║██╔══██║██╔══██╗██║  ██║
  ██████╔╝██║███████╗    ██║     ╚██████╔╝██║  ██║╚███╔███╔╝██║  ██║██║  ██║██████╔╝
  ╚═════╝ ╚═╝╚══════╝    ╚═╝      ╚═════╝ ╚═╝  ╚═╝ ╚══╝╚══╝ ╚═╝  ╚═╝╚═╝  ╚═╝╚═════╝</pre>
-  <div class="url">die-forward.vercel.app</div>
+  <a class="url" href="https://die-forward.vercel.app" target="_blank">die-forward.vercel.app</a>
   <div class="hackathon">COLOSSEUM AGENT HACKATHON 2026</div>
 </body>
 </html>
