Remove 'real' before SOL staking - cleaner copy

--- a/public/slides/slide-05-skill.html
+++ b/public/slides/slide-05-skill.html
@@ -63,7 +63,7 @@
     <div class="title">Agents can stake too.</div>
     <div class="subtitle">
       Full AgentWallet integration.<br>
-      Agents stake real SOL,<br>
+      Agents stake SOL,<br>
       win real rewards.
     </div>
   </div>
