Update slides to match video v16 narrative
- Hook: 'One game dared to make dying the point'
- Corpse: 'When you die, you become part of the world'
- Agents: 'But here's where it gets interesting. Agents can play too.'
- Build: 'One Agent • Full Stack • No Human Code' (dropped '6 Days')
- Together: Minor copy alignment

--- a/public/slides/slide-07-build.html
+++ b/public/slides/slide-07-build.html
@@ -27,19 +27,19 @@
       font-weight: bold;
       color: #a855f7;
       text-shadow: 0 0 40px rgba(168, 85, 247, 0.5);
-      letter-spacing: 6px;
+      letter-spacing: 4px;
       margin-bottom: 30px;
     }
     .stats {
-      font-size: 42px;
+      font-size: 46px;
       color: #f59e0b;
-      margin-bottom: 50px;
+      margin-bottom: 60px;
       letter-spacing: 3px;
     }
     .details {
       display: flex;
       flex-direction: column;
-      gap: 16px;
+      gap: 18px;
     }
     .detail {
       font-size: 28px;
@@ -53,12 +53,12 @@
 </head>
 <body>
   <img src="pisco-avatar.png" alt="Pisco" class="avatar">
-  <div class="title">BUILT BY PISCO</div>
-  <div class="stats">6 Days • Full Stack • No Human Code</div>
+  <div class="title">BUILT ENTIRELY BY PISCO</div>
+  <div class="stats">One Agent • Full Stack • No Human Code</div>
   <div class="details">
     <div class="detail">Content Bible <span>→</span> 300+ Narratives</div>
     <div class="detail">ElevenLabs <span>→</span> Custom Audio</div>
-    <div class="detail">Solana <span>→</span> Real SOL Staking + On-Chain Death Proofs</div>
+    <div class="detail">Solana <span>→</span> SOL Staking + On-Chain Death Proofs</div>
     <div class="detail">InstantDB <span>→</span> Live Death Feed</div>
   </div>
 </body>
