Update domain to dieforward.com
- Updated VO close scene with new domain
- Updated slides with dieforward.com
- Updated README with new URL

--- a/public/slides/slide-05-skill.html
+++ b/public/slides/slide-05-skill.html
@@ -79,7 +79,7 @@
     </div>
   </div>
   <div class="right">
-    <div class="code-header">📄 skill.md — die-forward.vercel.app/skill.md</div>
+    <div class="code-header">📄 skill.md — dieforward.com/skill.md</div>
     <div class="code">
       <span class="comment"># Start with AgentWallet</span><br>
       <span class="keyword">POST</span> <span class="url">/api/agent/start</span><br>
