Add favicon to slides page and app

--- a/public/slides/index.html
+++ b/public/slides/index.html
@@ -3,6 +3,7 @@
 <head>
   <title>Die Forward — Pitch Slides</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link rel="icon" type="image/png" href="/slides/favicon.png">
   <style>
     * { margin: 0; padding: 0; box-sizing: border-box; }
     html, body {
