Update video logo to match web app stacked format

--- a/public/slides/slide-08-close.html
+++ b/public/slides/slide-08-close.html
@@ -59,7 +59,7 @@
  ██║  ██║██║██╔══╝      ██╔══╝  ██║   ██║██╔══██╗██║███╗██║██╔══██║██╔══██╗██║  ██║
  ██████╔╝██║███████╗    ██║     ╚██████╔╝██║  ██║╚███╔███╔╝██║  ██║██║  ██║██████╔╝
  ╚═════╝ ╚═╝╚══════╝    ╚═╝      ╚═════╝ ╚═╝  ╚═╝ ╚══╝╚══╝ ╚═╝  ╚═╝╚═╝  ╚═╝╚═════╝</pre>
-  <a class="url" href="https://dieforward.com" target="_blank">dieforward.com</a>
+  <a class="url" href="https://die-forward.vercel.app" target="_blank">die-forward.vercel.app</a>
   <div class="hackathon">COLOSSEUM AGENT HACKATHON 2026</div>
 </body>
 </html>
