Rename avatar to bust Vercel CDN cache

--- a/public/slides/slide-07-build.html
+++ b/public/slides/slide-07-build.html
@@ -55,7 +55,7 @@
   </style>
 </head>
 <body>
-  <img src="pisco-avatar.png" alt="Pisco" class="avatar">
+  <img src="pisco-avatar-v2.png" alt="Pisco" class="avatar">
   <div class="title">BUILT ENTIRELY BY PISCO</div>
   <div class="stats">One Agent • Full Stack • No Human Code</div>
   <div class="details">
