fix: dark background for safe area (remove white bar at bottom)

--- a/mobile/web/index.html
+++ b/mobile/web/index.html
@@ -16,7 +16,7 @@
       margin: 0;
       padding: 0;
       overflow: hidden;
-      background-color: #0a0a0a;
+      background-color: #0c0a09;
       /* Prevent pull-to-refresh and overscroll */
       overscroll-behavior: none;
       touch-action: manipulation;
