fix: safe area bottom padding for mobile web
- Add CSS env(safe-area-inset-bottom) to #root in web/index.html
- Add Android fallback with minimum 16px padding on mobile
- Fix WebFrame to use 100% height instead of dvh (respects parent padding)
- Add explicit bottom edges to SafeAreaView
- Add Platform-specific bottom padding to main content

--- a/mobile/web/index.html
+++ b/mobile/web/index.html
@@ -29,6 +29,24 @@
     html {
       height: -webkit-fill-available;
     }
+    /* Safe area insets for notched devices */
+    #root {
+      /* iOS safe area */
+      padding-bottom: env(safe-area-inset-bottom, 0px);
+      box-sizing: border-box;
+    }
+    /* Android gesture bar fallback - add extra padding on mobile */
+    @supports not (padding-bottom: env(safe-area-inset-bottom)) {
+      #root {
+        padding-bottom: 20px;
+      }
+    }
+    /* Force safe area on all mobile */
+    @media (max-width: 768px) and (hover: none) {
+      #root {
+        padding-bottom: max(env(safe-area-inset-bottom, 0px), 16px);
+      }
+    }
   </style>
 </head>
 <body>
